# inext-ai-tutor

./: .gitignore  .replit  LICENSE  Readme.md  To refactor your bbb.py  back.py  bbb.py  blockchain.py  pyproject.toml  readme.md  requirements.txt  schemas.py  test.py  vercel.json  web3ai.db
attached_assets/: Pasted-iNextAI-Tutor-The-Web3-Learning-Companion-First-Feature-Users-Dashboard-Feature-User-Profile--1743980302844.txt  Pasted-iNextAI-Tutor-The-Web3-Learning-Companion-iNextAI-Tutor-The-Web3-Learning-Companion-First-Feature--1746488596235.txt
static/css/: styles (2).css
templates/: badges.html  chat.html  chat_org.html  course.html  dashboard.html  exam.html  learning.html  login.html  progress (2).html  progress.html  quiz.html  roadmap.html  rrrr.html  test.html  url.html
templates/roadmaps/: roadmap_2_6 (2).html  web3ai (2).db
web3Tutor/: Readme.md  app.py  back.py  bbb.py  config.py  crud.py  models.py  requirements.txt  schemas.py  server.py  utils.py  walletconnect.py  web3ai.db
web3Tutor/controllers/: landing_controller.py
web3Tutor/database/: database_operations.py
web3Tutor/models/: database.py
web3Tutor/pages/landing/: landing_controller.py
web3Tutor/services/: wallet_service.py
web3Tutor/static/css/: landing.css  styles.css
web3Tutor/templates/: achievements.html  base.html  chat.html  chat_org.html  community.html  course.html  dash_conn.html  dashboard.html  error.html  index.html  landing.html  learning.html  login.html  module.html  new_dash.html  progress.html  quiz.html  roadmap.html  settings.html  simulator.html  success.html
(+8 files in other folders)
